--- a/DevOps-Stub-main/cloudbuild.yaml
+++ b/DevOps-Stub-main/cloudbuild.yaml
@@ -1,45 +1,4 @@
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment
-  namespace: default
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
-      tolerations:
-      - key: instance_type
-        value: spot
-        effect: NoSchedule
-        operator: Equal
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: team
-                operator: In
-                values:
-                - devops
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - nginx
-            topologyKey: kubernetes.io/hostname
+steps:
+- name: gcr.io/cloud-builders/docker
+  args: ["build", "-t", "asia-southeast1-docker.pkg.dev/omni-devops-364711/ats-registry/frontend-$SHORT_SHA", "-f", "frontend/Dockerfile",  "frontend/"]
+images: [asia-southeast1-docker.pkg.dev/omni-devops-364711/ats-registry/frontend-$SHORT_SHA]
